
	* envfit: try to produce something sensible if fitted variable has
	constant values (invariable vector, one-level factor). Report
	arrow heads as all zero, and R2=0 for vectors, and the centroid to
	the data centroid and R2=0 for factors. Tied values are now
	treated differently in factorfit: now they support null
	hypothesis, previously they decreased the P-values. 

	* fisherfit: use analytic derivatives in non-linear minimizer nlm(). 

	* nestednodf: matrix fill was wrongly calculated in weighted
	analysis. The nominator was length of 'comm', and if input was a
	data frame that was the number of columns instead of the number of
	cells. The fill was correct in non-weighted analysis because there
	data were transformed to a matrix, and the length of a matrix is
	the number of cells (unlike in data frames).

	* nestednodf: weighted analysis gave all statistics as zero if
	binary data were supplied. Some ">" comparisons were changed to
	">=" and now weighted analysis of binary data gives same results
	as non-weighted analysis. However, this can change results of
	weighted analysis of quantitative data. The change needs
	endorsement by the function author Gustavo Carvalho.

	* oecosimu: warns user if the specified nullmodel 'method' changes
	quantitative input data to binary data under cover. Some people
	have not noticed this.
	
Version 2.1-35 (closed September 25, 2013)

	* ordilabel: colour arguments ('col', 'fill', 'borderä) can now be
	vectors and will be recycled if needed. May need care if used with
	'select', but should work with 'priority'. This was needed for a
	function under development and testing: when labelling over lines,
	it may be nice if the border has the same colour as the line
	covered.

	* MDSrotate: can now rotate a solution to more than one vector,
	provided that the number of dimensions is higher than the number
	of vectors. Because fitted vectors usually are correlated, only