@@ -1,12 +1,8 @@
-"print.fisherfit" <-
+`print.fisherfit` <-
     function (x, ...) 
 {
     cat("\nFisher log series model\n")
-    cat("No. of species:", sum(x$fisher), "\n\n")
-    out <- cbind(x$estimate, sqrt(diag(solve(x$hessian))))
-    colnames(out) <- c("Estimate", "Std. Error")
-    rownames(out) <- "alpha"
-    printCoefmat(out)
-    cat("\n")
+    cat("No. of species:", sum(x$fisher), "\n")
+    cat("Fisher alpha:  ", x$estimate, "\n\n")
     invisible(x)
 }
